# RoboHub

./: CMakeLists.txt  Dockerfile  Doxyfile  README.md  docker_build.sh  docker_run.sh
data/: map.yaml
docs/html/: README_8md.html  annotated.html  astar__planner_8h.html  astar__planner_8h_source.html  base__global__planner_8h.html  base__global__planner_8h_source.html  classAstarPlanner2d-members.html  classAstarPlanner2d.html  classBaseGlobalPlanner2d-members.html  classBaseGlobalPlanner2d.html  classKDNode-members.html  classKDNode.html  classKDTree-members.html  classKDTree.html  classNormalEstimator-members.html  classNormalEstimator.html  classOccupancyGrid2d-members.html  classOccupancyGrid2d.html  classPlaneExtractor-members.html  classPlaneExtractor.html  classPoint-members.html  classPoint.html  classRRTPlanner2d-members.html  classRRTPlanner2d.html  classes.html  dir_68da63cbe58bd35e63ecfc532bb955a7.html  dir_84fc7623a307150814fcb9988a6a994b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ebed218ca042e0cae3861bf18b14f766.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  hierarchy.html  (+20 more)
scripts/: check_map_path.py  check_normals.py  check_plane_extraction.py  cov_matrix.py  generate_points.py  test_astar.sh  test_normal_estimation.sh  test_plane_extraction.sh  test_rrt.sh
tests/: test_astar.cpp  test_compute_covariance_matrix.cpp  test_kdtree.cpp  test_normal_estimation.cpp  test_plane_extraction.cpp  test_point_types.cpp  test_rrt.cpp  test_sphere.cpp
(+99 files in other folders)
